--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <p>Relacionamento</p>
         </div>
         <div class="cards-grid">
-            <img src="image/icon.png" alt="icone de um coracao">
+            <img src="image/heart.png" alt="icone de um coracao">
             <p>Sabedoria</p>
         </div><div class="cards-grid">
-            <img src="image/icon.png" alt="icone de um coracao">
+            <img src="image/heart.png" alt="icone de um coracao">
             <p>Amor</p>
         </div><div class="cards-grid">
-            <img src="image/icon.png" alt="icone de um coracao">
+            <img src="image/heart.png" alt="icone de um coracao">
             <p>amizade</p>
         </div>
     </section>
