--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
     <section class="segunda-sessao-grid">
         <div class="cards-grid">
-            <img src="../image/heart.png" alt="icone de um coracao">
+            <img src="image/heart.png" alt="icone de um coracao">
             <p>Relacionamento</p>
         </div>
         <div class="cards-grid">
-            <img src="../image/heart.png" alt="icone de um coracao">
+            <img src="image/heart.png" alt="icone de um coracao">
             <p>Sabedoria</p>
         </div>
         <div class="cards-grid">
-            <img src="../image/heart.png" alt="icone de um coracao">
+            <img src="image/heart.png" alt="icone de um coracao">
             <p>Amor</p>
         </div>
         <div class="cards-grid">
-            <img src="../image/heart.png" alt="icone de um coracao">
+            <img src="image/heart.png" alt="icone de um coracao">
             <p>amizade</p>
         </div>
     </section>
